clang/test/Parser/missing-end-1-gh64065-nocrash.m
// RUN: %clang_cc1 -fsyntax-only -verify %s

@interface Roo // expected-note {{class started here}}
// expected-error@+1 {{missing '@end'}}
@interface // expected-error {{expected identifier}}
